force-app/main/default/objects/Referral_Bonus__c/Referral_Bonus__c.object-meta.xml
<CustomObject>
    <label>Referral Bonus</label>
    <nameField>
        <displayFormat>RB-{00000}</displayFormat>
        <label>Referral Bonus Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Bonus</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>