force-app/main/default/objects/Referral_Bonus__c/fields/Payment_Week__c.field-meta.xml
<CustomField>
    <fullName>Payment_Week__c</fullName>
    <label>Payment Week</label>
    <type>Date</type>
</CustomField>