force-app/main/default/objects/Referral_Bonus__c/fields/Referral_Amount__c.field-meta.xml
<CustomField>
    <fullName>Referral_Amount__c</fullName>
    <formula>250</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>