force-app/main/default/objects/Referral_Bonus__c/fields/Referral_Payment_Created__c.field-meta.xml
<CustomField>
    <fullName>Referral_Payment_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Payment Created</label>
    <type>Checkbox</type>
</CustomField>