force-app/main/default/objects/Referral_Bonus__c/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Referral_Bonus(Referred By)</relationshipLabel>
    <relationshipName>Referral_Bonus1</relationshipName>
    <type>Lookup</type>
</CustomField>