force-app/main/default/objects/Referral_Bonus__c/fields/Referred_To__c.field-meta.xml
<CustomField>
    <fullName>Referred_To__c</fullName>
    <label>Referred To</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Referral Bonus (Referred To)</relationshipLabel>
    <relationshipName>Referral_Bonus</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>