force-app/main/default/objects/Referral_Bonus__c/fields/Referrer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Amount__c</fullName>
    <formula>500</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>