force-app/main/default/objects/Referral_Bonus__c/fields/Referrer_Payment_Created__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Payment_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referrer Payment Created</label>
    <type>Checkbox</type>
</CustomField>